--- a/src/app/views/view.possiblecity.html
+++ b/src/app/views/view.possiblecity.html
@@ -1,1 +1,1 @@
-<p><a (click)="selectCity(cityName)" href="javascript:;">{{ cityName }}</a></p>
+<a (click)="selectCity(cityName)" href="javascript:;">{{ cityName.name }}</a>
