--- a/src/app/views/view.possiblecity.less
+++ b/src/app/views/view.possiblecity.less
@@ -1,6 +1,6 @@
-.possible-city-block {
-    display: block;
-    position: relative;
-    width: 100%;
+@import "../../../public/css/variables";
 
+a {
+    color: #fff;
+    text-decoration: none !important;
 }
