--- a/src/app/views/view.cityselector.html
+++ b/src/app/views/view.cityselector.html
@@ -1,5 +1,14 @@
 <main>
-    <h4>{{ title }}</h4>
+    <h4 class="airport-selector-title">{{ title }}</h4>
     <!--input [(ngModel)]="selectedCity" auto-complete [source]="cities" value-property-name="code" display-property-name="name" (valueChanged)="selectCity($event)" /-->
-    <ng2-completer [(ngModel)]="selectedCity" [dataService]="dataService" [minSearchLength]="0" (selected)="selectCity($event)" placeholder="Select airport"></ng2-completer>
+    <ng2-completer 
+        [(ngModel)]="selectedCity" 
+        [dataService]="dataService" 
+        [minSearchLength]="0" 
+        (selected)="selectCity($event)"
+        [disableInput]="inputDisabled" 
+        [autoMatch]="true" 
+        [inputName]="airport-selector"
+        placeholder="Select airport">
+    </ng2-completer>
 </main>
