Update project structure

--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -1,4 +1,5 @@
 @fontStyle: 'Roboto', sans-serif;
 @baseColor: #073590;
-@lightColor: #1e8adf;
+@textBlue: #337ab7;
+@lightColor: #2091eb;
 @alternativeColor: #F1C933;
