--- a/src/app/views/components/view.possibleflight.less
+++ b/src/app/views/components/view.possibleflight.less
@@ -1,4 +1,8 @@
-@import "../../../public/css/variables";
+@import "./../../../../public/css/variables";
+
+.possible-flights-flight {
+    
+}
 
 .flight {
     background-color: @lightColor;
