Update controls module

--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -3,3 +3,8 @@
 @textBlue: #337ab7;
 @lightColor: #2091eb;
 @alternativeColor: #F1C933;
+@smallFontSize: 9px;
+@baseFontSize: 12px;
+@largeFontSize: 18px;
+@xlargeFontSize: 24px;
+@xxlargeFontSize: 36px;
