--- a/src/app/views/components/view.cityselector.less
+++ b/src/app/views/components/view.cityselector.less
@@ -10,7 +10,7 @@
         border: 0;
         border-bottom: 1px solid @baseColor;
         color: @lightColor;
-        font-size: large;
+        font-size: @xlargeFontSize;
         text-align: center;
         width: 100%;
 
