--- a/src/app/views/components/view.datepicker.html
+++ b/src/app/views/components/view.datepicker.html
@@ -1,3 +1,4 @@
 <main>
     <datepicker [(ngModel)]="dt" [minDate]="minDate" [showWeeks]="true"></datepicker>
+    <span>{{ date | date:'fullDate'}}</span>
 </main>
