--- a/src/app/views/components/view.possibleflight.less
+++ b/src/app/views/components/view.possibleflight.less
@@ -30,7 +30,7 @@
 
     &-price {
         color: @alternativeColor;        
-        font-size: 36px;
+        font-size: @xxlargeFontSize;
         line-height: 50px;
         padding-right: 10px;
         text-align: right;
