--- a/src/app/views/view.city.module.less
+++ b/src/app/views/view.city.module.less
@@ -1,9 +1,16 @@
 @import "../../../public/css/variables";
 
+
+
 flight-parameters {
     display: block;
     margin: 20px auto 0;
     width: 90%;
+}
+
+.route-type {
+    text-align: center;
+    width: 100%;
 }
 
 .possible-cities {
