--- a/src/app/views/view.controls.module.html
+++ b/src/app/views/view.controls.module.html
@@ -1,3 +1,5 @@
-<button *ngIf="isArrivalSelect" type="button" class="start-search-button btn btn-primary" (click)="searchFlights($event)">Search</button>
-<button type="button" class="new-search-button btn btn-primary" (click)="newSearch($event)">Start new search</button>
-<button type="button" class="edit-search-button btn btn-primary" (click)="editSearch($event)">Edit current search</button>
+<div class="button-row">
+    <button *ngIf="isArrivalSelect && !showFlights" type="button" class="start-search-button btn btn-primary" (click)="searchFlights($event)">Search</button>
+    <button *ngIf="showFlights" type="button" class="new-search-button btn btn-primary" (click)="updateSearch(true)">Start new search</button>
+    <button *ngIf="showFlights" type="button" class="edit-search-button btn btn-primary" (click)="updateSearch(false)">Edit current search</button>
+</div>
