--- a/src/app/views/view.city.module.html
+++ b/src/app/views/view.city.module.html
@@ -1,7 +1,9 @@
-<flight-parameters *ngIf="!gotFlights">
-    <div class="btn-group row">
-        <label class="btn btn-success" [(ngModel)]="twoWayTicket" btnRadio="true" ngDefaultControl>Two-way ticket</label>
-        <label class="btn btn-success" [(ngModel)]="twoWayTicket" btnRadio="false" ngDefaultControl>One-way ticket</label>
+<flight-parameters *ngIf="!showFlights">
+    <div class="row route-type">
+        <div class="btn-group">
+            <label class="btn btn-success" [(ngModel)]="twoWayTicket" btnRadio="true" (click)="changeFlightType(true)" ngDefaultControl>Two-way ticket</label>
+            <label class="btn btn-success" [(ngModel)]="twoWayTicket" btnRadio="false" (click)="changeFlightType(false)" ngDefaultControl>One-way ticket</label>
+        </div>
     </div>
     <div class="row">
         <div class="col-xs-12 col-lg-6">
