--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -3,6 +3,7 @@
 @textBlue: #337ab7;
 @lightColor: #2091eb;
 @alternativeColor: #F1C933;
+@errorColor: rgba(207,46,29,1.00);
 @smallFontSize: 9px;
 @baseFontSize: 12px;
 @largeFontSize: 18px;
