--- a/src/app/views/view.city.module.html
+++ b/src/app/views/view.city.module.html
@@ -1,8 +1,8 @@
 <flight-parameters *ngIf="!showFlights">
     <div class="row route-type">
         <div class="btn-group">
-            <label class="btn btn-success" [(ngModel)]="twoWayTicket" btnRadio="true" (click)="changeFlightType(true)" ngDefaultControl>Two-way ticket</label>
-            <label class="btn btn-success" [(ngModel)]="twoWayTicket" btnRadio="false" (click)="changeFlightType(false)" ngDefaultControl>One-way ticket</label>
+            <label class="btn btn-primary" [(ngModel)]="twoWayTicket" btnRadio="true" (click)="changeFlightType(true)" ngDefaultControl>Two-way ticket</label>
+            <label class="btn btn-primary" [(ngModel)]="twoWayTicket" btnRadio="false" (click)="changeFlightType(false)" ngDefaultControl>One-way ticket</label>
         </div>
     </div>
     <div class="row">
