--- a/src/app/views/view.date.module.less
+++ b/src/app/views/view.date.module.less
@@ -1,9 +1,12 @@
+.date-selector-module {
+    margin: 0 auto;
+    width: 90%;
+}
+
 .day-selector {
     box-sizing: border-box;
     display: inline-block;
-    margin: 30px 15px;
-    padding: 0 2%;
+    margin: 10px 0;
     vertical-align: top;
-    width: calc(~'49% - 30px');
-
+    width: 100%;
 }
