Update styling for mobile devices

--- a/public/css/variables.less
+++ b/public/css/variables.less
@@ -9,3 +9,9 @@
 @largeFontSize: 18px;
 @xlargeFontSize: 24px;
 @xxlargeFontSize: 36px;
+
+@mobile-smallFontSize: 8px;
+@mobile-baseFontSize: 12px;
+@mobile-largeFontSize: 16px;
+@mobile-xlargeFontSize: 20px;
+@mobile-xxlargeFontSize: 32px; 
