--- a/src/app/views/components/view.possibleflight.html
+++ b/src/app/views/components/view.possibleflight.html
@@ -1,5 +1,5 @@
 <div class="flight row" [ngClass]="{selectedFlight: selectedFlight}" (click)="flightSelected()">
-    <div class="col-lg-8">
+    <div class="flight-time">
         <div class="flight-departure">
             <span class="label">Departure Date</span>
             <span class="date">{{ getDate(flight.dateFrom) }}</span>
@@ -13,10 +13,8 @@
             <span class="time">{{ getTime(flight.dateTo) }}</span>
         </div>
     </div>
-    <div class="col-lg-4">
-        <div class="flight-price">
-            <span>{{ flight.currency }}</span>
-            <span>{{ flight.price.toFixed(2) }}</span>
-        </div>
+    <div class="flight-price">
+        <span>{{ flight.currency }}</span>
+        <span>{{ flight.price.toFixed(2) }}</span>
     </div>
 </div>
