--- a/src/app/views/view.flights.module.less
+++ b/src/app/views/view.flights.module.less
@@ -38,4 +38,8 @@
         color: @baseColor;
         font-weight: 600;
     }
+
+    @media all and (max-width: 960px) {
+        font-size: @mobile-largeFontSize;
+    }
 }
