--- a/src/app/views/components/view.cityselector.less
+++ b/src/app/views/components/view.cityselector.less
@@ -53,6 +53,10 @@
             }
         }
 
+
+        @media all and (max-width: 960px) {
+            font-size: @mobile-xlargeFontSize;
+        }
             
     }
 
