--- a/src/app/views/components/view.cityselector.html
+++ b/src/app/views/components/view.cityselector.html
@@ -8,7 +8,7 @@
         [disableInput]="inputDisabled" 
         [autoMatch]="false" 
         [inputName]="airport-selector"
-        placeholder="Select airport"
+        placeholder="Start typing for selecting airport"
         (blur)="blur()"
         (highlighted)="highlighted($event)">
     </ng2-completer>
